examples/semantics/errors/error10.grace
fun error10 () : nothing
{
	if( not (5 > 9)) then {
		puti(0);
	}
}
